# aa-elf-tools

./: .gitignore  Makefile  Makefile.am  README.md  bootstrap.sh  config.h.in  configure  configure.ac  util.c  util.h
include/: aa-elf-util.h  util.h
src/: dev_lst.c  dev_lst.h  findelfs.c  printsyms.c  util.c
